[gd_scene load_steps=18 format=3 uid="uid://dbe2db8aq7d6h"]

[ext_resource type="Script" uid="uid://bca5vmrcg5tfd" path="res://scripts/tack/sing_leg_wraps_creation.gd" id="1_uhr1n"]
[ext_resource type="Texture2D" uid="uid://diy8htskfybtd" path="res://assets/moon_bg.png" id="2_8qofu"]
[ext_resource type="Texture2D" uid="uid://8f0rfohmniwa" path="res://assets/menuUI.png" id="2_44igv"]
[ext_resource type="Texture2D" uid="uid://dm1bh2yywotao" path="res://assets/icon.png" id="3_5lcxu"]
[ext_resource type="Theme" uid="uid://clxftkhcliti8" path="res://assets/UI_theme.tres" id="4_ubyg0"]
[ext_resource type="Theme" uid="uid://dm4jlnbmnj4eb" path="res://assets/UI_theme_dark.tres" id="5_uuf06"]
[ext_resource type="Theme" uid="uid://dix1yxdlw8hbv" path="res://assets/UI_theme_smol.tres" id="6_3eruk"]
[ext_resource type="Theme" uid="uid://vjxbkxdwdxu4" path="res://assets/UI_theme_alert.tres" id="7_sufnl"]
[ext_resource type="Theme" uid="uid://cf6ttsgxwgavd" path="res://assets/UI_theme_blue.tres" id="8_xfp0q"]
[ext_resource type="PackedScene" uid="uid://s4coqphlup24" path="res://scene/components/buttonSMOL2.tscn" id="9_c2rbm"]
[ext_resource type="Theme" uid="uid://cof5u4dam7c2t" path="res://assets/UI_theme_shadowed.tres" id="10_bk1gt"]
[ext_resource type="PackedScene" uid="uid://b3cou3ndcs75h" path="res://scene/components/error_message.tscn" id="11_m3vbq"]
[ext_resource type="PackedScene" uid="uid://bpgiy2j33slge" path="res://scene/components/pop_up.tscn" id="12_2yjgx"]
[ext_resource type="PackedScene" uid="uid://wonyaiea8tn2" path="res://scene/components/buttonSMOL2_blue.tscn" id="12_m1gi7"]
[ext_resource type="PackedScene" uid="uid://cdigxro282sfm" path="res://scene/components/checkAlert.tscn" id="13_ykkcs"]
[ext_resource type="PackedScene" uid="uid://clixcby1mmxr3" path="res://scene/helpScreen.tscn" id="14_j62u5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kx556"]
atlas = ExtResource("2_44igv")
region = Rect2(58, 10, 28, 28)

[node name="legWrapsSetCreation" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uhr1n")

[node name="background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -640.0
offset_top = -360.0
offset_right = -600.0
offset_bottom = -320.0

[node name="TextureRect2" type="TextureRect" parent="background"]
z_index = -3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 32.6
anchor_bottom = 18.65
offset_left = -20.0
offset_top = -20.0
offset_right = 1260.0
offset_bottom = 700.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_8qofu")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -167.5
offset_right = 304.0
offset_bottom = 167.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_kx556")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
custom_minimum_size = Vector2(513, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -204.0
offset_top = 9.0
offset_right = 204.0
offset_bottom = 76.0
grow_horizontal = 2
theme_override_constants/separation = 2
alignment = 1

[node name="TitleContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 130
alignment = 1

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/VBoxContainer/TitleContainer"]
visible = false
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
texture = ExtResource("3_5lcxu")

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/TitleContainer"]
layout_mode = 2
theme = ExtResource("4_ubyg0")
theme_override_colors/font_color = Color(0.178263, 0.423711, 0.665043, 1)
text = "New Leg Wraps Item"

[node name="TextureRect2" type="TextureRect" parent="NinePatchRect/VBoxContainer/TitleContainer"]
visible = false
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
texture = ExtResource("3_5lcxu")
flip_h = true

[node name="HelperLabel3" type="Container" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
theme = ExtResource("5_uuf06")

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
alignment = 1

[node name="artist" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(265, 0)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer3/artist"]
layout_mode = 2
theme = ExtResource("6_3eruk")
text = "Texture Artist"
horizontal_alignment = 2

[node name="required" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer3/artist"]
layout_mode = 2
theme = ExtResource("7_sufnl")
text = "*"
horizontal_alignment = 2

[node name="artistText" type="LineEdit" parent="NinePatchRect/VBoxContainer/HBoxContainer3/artist"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
focus_neighbor_right = NodePath("../../inspiration/inspoText")
focus_neighbor_bottom = NodePath("../../../tackName/tackText")
focus_next = NodePath("../../inspiration/inspoText")
theme = ExtResource("7_sufnl")
placeholder_text = "Who made the tack texture?"

[node name="inspiration" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(265, 0)
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer3/inspiration"]
layout_mode = 2
theme = ExtResource("6_3eruk")
text = "Inspiration"
horizontal_alignment = 2

[node name="inspoText" type="LineEdit" parent="NinePatchRect/VBoxContainer/HBoxContainer3/inspiration"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../../artist/artistText")
focus_neighbor_bottom = NodePath("../../../tackName/tackText")
focus_next = NodePath("../../../tackName/tackText")
focus_previous = NodePath("../../artist/artistText")
theme = ExtResource("7_sufnl")
placeholder_text = "IRL Tack || SSO || N/a"

[node name="tackName" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/tackName"]
layout_mode = 2
theme = ExtResource("6_3eruk")
text = "Leg Wraps Name"
horizontal_alignment = 2

[node name="required" type="Label" parent="NinePatchRect/VBoxContainer/tackName"]
layout_mode = 2
theme = ExtResource("7_sufnl")
text = "*"
horizontal_alignment = 2

[node name="tackText" type="LineEdit" parent="NinePatchRect/VBoxContainer/tackName"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../../HBoxContainer3/artist/artistText")
focus_previous = NodePath("../../HBoxContainer3/inspiration/inspoText")
placeholder_text = "Indigo"

[node name="Container" type="Container" parent="NinePatchRect/VBoxContainer/tackName"]
custom_minimum_size = Vector2(49, 0)
layout_mode = 2

[node name="HelperLabel2" type="Label" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme = ExtResource("8_xfp0q")
text = "Below is how the item will appear in game as well as the texture/data name used in /give commands"
horizontal_alignment = 1
autowrap_mode = 2

[node name="previewBox" type="HSplitContainer" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(513, 0)
layout_mode = 2

[node name="inGameBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/previewBox"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/previewBox/inGameBoxContainer"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
theme = ExtResource("6_3eruk")
text = "In Game Item Name: "

[node name="inGameLabel" type="Label" parent="NinePatchRect/VBoxContainer/previewBox/inGameBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(151, 0)
layout_mode = 2
theme = ExtResource("5_uuf06")
text_overrun_behavior = 3

[node name="dataBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/previewBox"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/previewBox/dataBoxContainer2"]
custom_minimum_size = Vector2(106, 0)
layout_mode = 2
text = "Texture/Data Name: "

[node name="dataLabel" type="Label" parent="NinePatchRect/VBoxContainer/previewBox/dataBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("5_uuf06")
text_overrun_behavior = 3

[node name="Spacer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 9)
layout_mode = 2
alignment = 1

[node name="Line2D" type="Line2D" parent="NinePatchRect/VBoxContainer/Spacer"]
position = Vector2(-0.657455, 6)
scale = Vector2(3.0766, 1)
points = PackedVector2Array(176.296, 2, -1, 2)
width = 1.0
default_color = Color(0.811765, 0.67451, 0.490196, 1)

[node name="helperLabel7" type="Label" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
theme = ExtResource("8_xfp0q")
text = "~~ Set Tack Information ~~"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(210, 96)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 9

[node name="armorCheck" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="Container" type="Container" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/armorCheck"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/armorCheck"]
layout_mode = 2
theme = ExtResource("6_3eruk")
text = " Can be worn with Armor?"
horizontal_alignment = 2

[node name="Container2" type="Container" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/armorCheck"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="armorCheckBox" type="CheckBox" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/armorCheck"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../../../tackName/tackText")

[node name="Container3" type="Container" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/armorCheck"]
custom_minimum_size = Vector2(9, 0)
layout_mode = 2

[node name="armorLabel" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/armorCheck"]
unique_name_in_owner = true
custom_minimum_size = Vector2(21, 0)
layout_mode = 2
theme = ExtResource("5_uuf06")
text = "No"

[node name="moneyCheck" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Container2" type="Container" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/moneyCheck"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/moneyCheck"]
layout_mode = 2
theme = ExtResource("6_3eruk")
text = "Purchasing Coin"
horizontal_alignment = 2

[node name="required" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/moneyCheck"]
layout_mode = 2
theme = ExtResource("7_sufnl")
text = "*"
horizontal_alignment = 2

[node name="coinOptions" type="OptionButton" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/moneyCheck"]
unique_name_in_owner = true
layout_mode = 2
focus_next = NodePath("../../saddleBox/legWrapsSpinBox")
theme = ExtResource("5_uuf06")
item_count = 7
popup/item_0/text = "Copper"
popup/item_1/text = "Iron"
popup/item_1/id = 1
popup/item_2/text = "Emerald"
popup/item_2/id = 2
popup/item_3/text = "Gold"
popup/item_3/id = 3
popup/item_4/text = "Diamond"
popup/item_4/id = 4
popup/item_5/text = "Netherite"
popup/item_5/id = 5
popup/item_6/text = "Amethyst"
popup/item_6/id = 6

[node name="Container" type="Container" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/moneyCheck"]
custom_minimum_size = Vector2(13, 0)
layout_mode = 2

[node name="saddleBox" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Container2" type="Container" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/saddleBox"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/saddleBox"]
layout_mode = 2
text = "Purchase Price:"

[node name="Container" type="Container" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/saddleBox"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2

[node name="legWrapsSpinBox" type="SpinBox" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/saddleBox"]
unique_name_in_owner = true
layout_mode = 2
focus_previous = NodePath("../../moneyCheck/coinOptions")
theme = ExtResource("4_ubyg0")
min_value = 1.0
max_value = 64.0
value = 16.0
alignment = 1

[node name="Container" type="Container" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2

[node name="Line2D" type="Line2D" parent="NinePatchRect/VBoxContainer/HBoxContainer/Container"]
position = Vector2(45.3425, 2)
scale = Vector2(3.0766, 1)
points = PackedVector2Array(-7, 2, -7, 112)
width = 0.5
default_color = Color(0.811765, 0.67451, 0.490196, 1)

[node name="VBoxContainer2" type="VBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Preload your textures into the pack!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="iconButton" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource("9_c2rbm")]
unique_name_in_owner = true
layout_mode = 2

[node name="renderButton" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource("9_c2rbm")]
unique_name_in_owner = true
layout_mode = 2

[node name="hoofButton" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource("9_c2rbm")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="iconLineEdit" type="LineEdit" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = " Icon Texture"
editable = false

[node name="renderLineEdit" type="LineEdit" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
placeholder_text = " Tack Texture"
editable = false

[node name="hoofLineEdit" type="LineEdit" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
placeholder_text = " Hoof Texture"
editable = false

[node name="Label2" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("5_uuf06")
theme_override_constants/line_spacing = -5
text = "The selected textures will be copied to the pack. If left blank, you will need to add them manually."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect"]
layout_mode = 0
offset_left = 467.0
offset_top = 313.0
offset_right = 560.0
offset_bottom = 327.0

[node name="required" type="Label" parent="NinePatchRect/HBoxContainer"]
layout_mode = 2
theme = ExtResource("7_sufnl")
text = "*"
horizontal_alignment = 2

[node name="Label" type="Label" parent="NinePatchRect/HBoxContainer"]
layout_mode = 2
theme = ExtResource("10_bk1gt")
text = "= required field"

[node name="confirmButton" parent="NinePatchRect" instance=ExtResource("12_m1gi7")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 537.0
offset_top = 306.0
offset_right = 601.0
offset_bottom = 328.0
button_text = "Generate"

[node name="backButton" parent="NinePatchRect" instance=ExtResource("9_c2rbm")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 7.0
offset_top = 306.0
offset_right = 71.0
offset_bottom = 328.0
button_text = "Tack Menu"

[node name="butterflys" type="Control" parent="NinePatchRect"]
layout_mode = 3
anchors_preset = 0
offset_left = 5.0
offset_top = 5.5
offset_right = 45.0
offset_bottom = 45.5

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/butterflys"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
offset_left = 60.0
offset_top = 3.0
offset_right = 90.0
offset_bottom = 33.0
texture = ExtResource("3_5lcxu")

[node name="TextureRect2" type="TextureRect" parent="NinePatchRect/butterflys"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
offset_left = 509.0
offset_top = 3.0
offset_right = 539.0
offset_bottom = 33.0
texture = ExtResource("3_5lcxu")
flip_h = true

[node name="popUP_Saved" parent="." instance=ExtResource("12_2yjgx")]
visible = false
layout_mode = 1

[node name="popUP2_Dupe" parent="." instance=ExtResource("12_2yjgx")]
visible = false
layout_mode = 1

[node name="popUPexit" parent="." instance=ExtResource("12_2yjgx")]
visible = false
layout_mode = 1

[node name="checkPath" parent="." instance=ExtResource("13_ykkcs")]
visible = false
offset_left = 161.0
offset_top = -49.0
offset_right = 177.0
offset_bottom = -33.0
scale = Vector2(1.5, 1.5)

[node name="helpscreen" parent="." instance=ExtResource("14_j62u5")]
visible = false
layout_mode = 1

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 4
size = Vector2i(400, 300)
theme = ExtResource("6_3eruk")
theme_override_colors/folder_icon_color = Color(0.758928, 0.918193, 0.727778, 1)
theme_override_colors/file_icon_color = Color(0.584314, 0.854902, 0.847059, 1)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
filters = PackedStringArray("*.png;PNG Image")
use_native_dialog = true

[node name="popUPload" parent="." instance=ExtResource("12_2yjgx")]
visible = false
layout_mode = 1

[node name="errorMessage" parent="." instance=ExtResource("11_m3vbq")]
visible = false
layout_mode = 1

[connection signal="text_changed" from="NinePatchRect/VBoxContainer/HBoxContainer3/artist/artistText" to="." method="_on_artist_text_text_changed"]
[connection signal="text_changed" from="NinePatchRect/VBoxContainer/HBoxContainer3/inspiration/inspoText" to="." method="_on_inspo_text_text_changed"]
[connection signal="text_changed" from="NinePatchRect/VBoxContainer/tackName/tackText" to="." method="_on_tack_text_text_changed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/armorCheck/armorCheckBox" to="." method="_on_armor_check_box_pressed"]
[connection signal="item_selected" from="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/moneyCheck/coinOptions" to="." method="_on_coin_options_item_selected"]
[connection signal="button_pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/iconButton" to="." method="_on_icon_button_button_pressed"]
[connection signal="button_pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/renderButton" to="." method="_on_render_button_button_pressed"]
[connection signal="button_pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/hoofButton" to="." method="_on_rack_button_button_pressed"]
[connection signal="button_pressed" from="NinePatchRect/confirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="button_pressed" from="NinePatchRect/backButton" to="." method="_on_back_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
